[tool.poetry]
name = "line-account-porject"
version = "0.1.0"
description = ""
authors = ["JackXu19930319 <49975224+JackXu19930319@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
flask = "^3.1.0"
line-bot-sdk = "^3.14.2"
gevent = "^24.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
